# sp2024-cpe-613

./: .gitignore  .gitmodules  README.md
examples/000_loading_modules/: main.sh
examples/001_make_example/: Makefile  configure_and_build.sh  deviceQuery.cpp
examples/002_cmake_example/: CMakeLists.txt  configure_and_build.sh  helper_cuda.h
